--- a/force-app/main/default/classes/ABFL_InvokePaymentLink.cls
+++ b/force-app/main/default/classes/ABFL_InvokePaymentLink.cls
@@ -158,7 +158,7 @@ public with sharing class ABFL_InvokePaymentLink implements ASF_IntegrationInvoc
         }
         catch(Exception e) {
             ABCL_Logger.enableExceptionLogging();
-            ABCL_Logger.push('ABFL_InvokeBREProcess.processResponse');
+            ABCL_Logger.push('ABFL_InvokePaymentLink.processResponse');
             ABCL_Logger.message(e.getMessage());
             ABCL_Logger.emit();
         }
