--- a/force-app/main/default/classes/ABFL_AccountTeamMemberBatch.cls
+++ b/force-app/main/default/classes/ABFL_AccountTeamMemberBatch.cls
@@ -89,6 +89,7 @@ public class ABFL_AccountTeamMemberBatch implements Database.Batchable<SObject>{
             ABCL_Logger.enableExceptionLogging();
             ABCL_Logger.push('ABFL_AccountTeamMemberBatch.execute');
             ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.message(e.getStackTraceString());
             ABCL_Logger.emit();
         }
     }
