--- a/force-app/main/default/classes/ABFL_DMSSync_Orchestrator.cls
+++ b/force-app/main/default/classes/ABFL_DMSSync_Orchestrator.cls
@@ -95,6 +95,7 @@ public without sharing class ABFL_DMSSync_Orchestrator{
             ABCL_Logger.enableExceptionLogging();
             ABCL_Logger.push('ABFL_DMSSync_Orchestrator.transferABFLCaseFilesToDMS');
             ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.message(e.getStackTraceString());
             ABCL_Logger.emit();
         }
     }
@@ -168,6 +169,7 @@ public without sharing class ABFL_DMSSync_Orchestrator{
             ABCL_Logger.enableExceptionLogging();
             ABCL_Logger.push('ABFL_DMSSync_Orchestrator.syncDMSFilesManually');
             ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.message(e.getStackTraceString());
             ABCL_Logger.emit();
             return new ResponseWrapper(false, ABFL_Constants.DMS_GENERIC_ERROR);
         }
