--- a/force-app/main/default/classes/ABFL_InvokeBREProcess.cls
+++ b/force-app/main/default/classes/ABFL_InvokeBREProcess.cls
@@ -349,6 +349,7 @@ public with sharing class ABFL_InvokeBREProcess implements ASF_IntegrationInvoca
             ABCL_Logger.enableExceptionLogging();
             ABCL_Logger.push('ABFL_InvokeBREProcess.processResponse');
             ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.message(e.getStackTraceString());
             ABCL_Logger.emit();
         }
        
