--- a/force-app/main/default/classes/ABFL_ReassignProspectsBatch.cls
+++ b/force-app/main/default/classes/ABFL_ReassignProspectsBatch.cls
@@ -83,6 +83,7 @@ public class ABFL_ReassignProspectsBatch implements Database.Batchable<sObject>,
             ABCL_Logger.enableExceptionLogging();
             ABCL_Logger.push('ABFL_ReassignProspectsBatch.execute');
             ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.message(e.getStackTraceString());
             ABCL_Logger.emit();
         }
     }
