--- a/force-app/main/default/classes/ASF_redirectToCaseApprovalVFController.cls
+++ b/force-app/main/default/classes/ASF_redirectToCaseApprovalVFController.cls
@@ -5,10 +5,19 @@ public class ASF_redirectToCaseApprovalVFController {
         PageReference caPage;
         id recordId = ApexPages.currentPage().getParameters().get('Id');
         String targetRecordId = '';
-        List<ProcessInstanceWorkitem> piwis = [SELECT ID ,ProcessInstance.TargetObjectId FROM ProcessInstanceWorkitem WHERE Id=:recordId];
-        if(piwis.size()>0){
-            targetRecordId = piwis[0].ProcessInstance.TargetObjectId;
+        if(recordId.getsObjectType() == ProcessInstanceWorkitem.sObjectType){
+            List<ProcessInstanceWorkitem> piwis = [SELECT ID ,ProcessInstance.TargetObjectId FROM ProcessInstanceWorkitem WHERE Id=:recordId];
+            if(piwis.size()>0){
+                targetRecordId = piwis[0].ProcessInstance.TargetObjectId;
+            }
+        } else {
+            List<ProcessInstanceStep> piwis = [SELECT ID ,ProcessInstance.TargetObjectId FROM ProcessInstanceStep WHERE Id=:recordId];
+            if(piwis.size()>0){
+                targetRecordId = piwis[0].ProcessInstance.TargetObjectId;
+            }
         }
+        
+
         system.debug('targetRecordId'+targetRecordId);
         if(String.isNotBlank(targetRecordId)){
             if(Id.valueOf(targetRecordId).getSobjectType() == ASF_Case_Approv__c.sObjectType){
