--- a/force-app/main/default/classes/ASF_EmailMessageHelperTest.cls
+++ b/force-app/main/default/classes/ASF_EmailMessageHelperTest.cls
@@ -1,23 +1,17 @@
 @isTest
 public class ASF_EmailMessageHelperTest {
-    private final static Profile SYSTEMADMIN_PROFILE = [SELECT Id FROM Profile WHERE name='System Administrator' LIMIT 1];
-    @TestSetup
-    public static void setup() {
+    
+    @isTest
+    public static void validateIfGoingFromAuthorizedAddress(){
+        
         insert new SLA_Threshold_Warning__c(Case_SLA_Threshold_1__c = 0.5, Case_SLA_Threshold_2__c = 0.7,
-                                          Case_SLA_Threshold_3__c = 0.8, Stage_SLA_Threshold_1__c = 0.5,
-                                          Stage_SLA_Threshold_2__c = 0.7, Stage_SLA_Threshold_3__c = 0.6);
+                                           Case_SLA_Threshold_3__c = 0.8, Stage_SLA_Threshold_1__c = 0.5,
+                                           Stage_SLA_Threshold_2__c = 0.7, Stage_SLA_Threshold_3__c = 0.6);
+        
         Case c = new Case();
         c.Subject = 'Test';
         c.RecordTypeId = Schema.sObjectType.Case.getRecordTypeInfosByDeveloperName().get('Interaction').getRecordTypeId();
         insert c;
-
-        ASF_TestDataFactory.createCaseCategoryConfig();
-        List<Case> caseL = ASF_TestDataFactory.createCaseRecords(1);
-    }
-
-    @isTest
-    public static void validateIfGoingFromAuthorizedAddress(){
-        Case c = [select id from case where recordtypeid = :ASF_Constants.RT_INTERACTION limit 1];
         Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
         String[] toAddresses = new String[] {'test@test.com.invalid'}; 
         mail.setToAddresses(toAddresses);
@@ -29,9 +23,17 @@ public class ASF_EmailMessageHelperTest {
         Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail }); 
     } 
     @isTest
-    public static void checkAndReopenClosedCasesTest(){
+    public static void validateIfGoingFromAuthorizedAddressReopen(){
         
-        Case c = [select id from case where recordtypeid = :ASF_Constants.RT_FRAMEWORK limit 1];
+        insert new SLA_Threshold_Warning__c(Case_SLA_Threshold_1__c = 0.5, Case_SLA_Threshold_2__c = 0.7,
+                                           Case_SLA_Threshold_3__c = 0.8, Stage_SLA_Threshold_1__c = 0.5,
+                                           Stage_SLA_Threshold_2__c = 0.7, Stage_SLA_Threshold_3__c = 0.6);
+        ASF_TestDataFactory.createC3IntegrationsAndCase();
+        String cccId = [SELECT Id,CCC_External_Id__c FROM ASF_Case_Category_Config__c WHERE CCC_External_Id__c != null].CCC_External_Id__c;
+        Case c = new Case();
+        c.Subject = 'Test';
+        c.RecordTypeId = ASF_Constants.RT_INTERACTION;
+        insert c;
         Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
         String[] toAddresses = new String[] {'test@test.com.invalid'}; 
         mail.setToAddresses(toAddresses);
@@ -40,16 +42,25 @@ public class ASF_EmailMessageHelperTest {
         mail.setBccSender(false);
         mail.setUseSignature(false);
         mail.setPlainTextBody('This is test email with new name..');
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail }); 
-
-        c.Stage__c = 'Resolved';
-        c.Status = 'Closed';
+        Messaging.SendEmailResult[] initialResults = Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail });
+        
+        EmailMessage initialEmailMessage = new EmailMessage(
+            ParentId = c.Id,
+            FromAddress = 'testuser@example.com',
+            ToAddress = toAddresses[0],
+            Subject = 'Test Email Relay',
+            TextBody = 'This is test email with new name..',
+            MessageIdentifier = '<initialMessageId@example.com>'
+        );
+        insert initialEmailMessage;
+        
         c.RecordTypeId = ASF_Constants.RT_FRAMEWORK;
-        c.Reopen_Days__c = 1;
+        c.CCC_External_Id__c = cccId;
+        c.Status = ASF_Constants.ONCREATECLOSESTATUS;
+        c.Stage__c = ASF_Constants.ONCREATECLOSESTAGE;
+        c.Reopen_Days__c = 3;
         update c;
         
-        Test.startTest();
-        EmailMessage oldMail = [Select MessageIdentifier from EmailMessage LIMIT 1];
         Messaging.SingleEmailMessage mail2 = new Messaging.SingleEmailMessage();
         mail2.setToAddresses(toAddresses);
         mail2.setWhatId(c.Id);
@@ -57,76 +68,10 @@ public class ASF_EmailMessageHelperTest {
         mail2.setBccSender(false);
         mail2.setUseSignature(false);
         mail2.setPlainTextBody('This is test email with new name..');
-        mail2.setInReplyTo(oldMail.MessageIdentifier);
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail2 });
-        test.stopTest();
+        Map<String, String> headers = new Map<String, String>();
+        mail2.setInReplyTo('<initialMessageId@example.com>');
+        mail2.setReferences('<initialMessageId@example.com>');
+        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail2 }); 
     } 
-
-    @isTest
-    public static void checkAndReopenClosedCasesTest2(){
-        
-        Case c = [select id from case where recordtypeid = :ASF_Constants.RT_FRAMEWORK limit 1];
-        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
-        String[] toAddresses = new String[] {'test@test.com.invalid'}; 
-        mail.setToAddresses(toAddresses);
-        mail.setWhatId(c.Id);
-        mail.setSubject('Test Email Relay');
-        mail.setBccSender(false);
-        mail.setUseSignature(false);
-        mail.setPlainTextBody('This is test email with new name..');
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail }); 
-
-        c.Stage__c = 'Resolved';
-        c.Status = 'Closed';
-        c.RecordTypeId = ASF_Constants.RT_FRAMEWORK;
-        c.Reopen_Days__c = -1;
-        update c;
-        
-        Test.startTest();
-        EmailMessage oldMail = [Select MessageIdentifier from EmailMessage LIMIT 1];
-        Messaging.SingleEmailMessage mail2 = new Messaging.SingleEmailMessage();
-        mail2.setToAddresses(toAddresses);
-        mail2.setWhatId(c.Id);
-        mail2.setSubject('Test Email Relay');
-        mail2.setBccSender(false);
-        mail2.setUseSignature(false);
-        mail2.setPlainTextBody('This is test email with new name..');
-        mail2.setInReplyTo(oldMail.MessageIdentifier);
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail2 });
-        test.stopTest();
-    } 
-
-    @isTest
-    public static void checkAndReopenClosedCasesTest3(){
-        
-        Case c = [select id from case where recordtypeid = :ASF_Constants.RT_FRAMEWORK limit 1];
-        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
-        String[] toAddresses = new String[] {'test@test.com.invalid'}; 
-        mail.setToAddresses(toAddresses);
-        mail.setWhatId(c.Id);
-        mail.setSubject('Test Email Relay');
-        mail.setBccSender(false);
-        mail.setUseSignature(false);
-        mail.setPlainTextBody('This is test email with new name..');
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail }); 
-
-        c.Stage__c = 'Resolved';
-        c.Status = 'Closed';
-        c.RecordTypeId = ASF_Constants.RT_FRAMEWORK;
-        c.Reopen_Days__c = null;
-        update c;
-        
-        Test.startTest();
-        EmailMessage oldMail = [Select MessageIdentifier from EmailMessage LIMIT 1];
-        Messaging.SingleEmailMessage mail2 = new Messaging.SingleEmailMessage();
-        mail2.setToAddresses(toAddresses);
-        mail2.setWhatId(c.Id);
-        mail2.setSubject('Test Email Relay');
-        mail2.setBccSender(false);
-        mail2.setUseSignature(false);
-        mail2.setPlainTextBody('This is test email with new name..');
-        mail2.setInReplyTo(oldMail.MessageIdentifier);
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail2 });
-        test.stopTest();
-    } 
+    
 }
