--- a/force-app/main/default/classes/ASF_EmailMessageHelperTest.cls
+++ b/force-app/main/default/classes/ASF_EmailMessageHelperTest.cls
@@ -1,17 +1,23 @@
 @isTest
 public class ASF_EmailMessageHelperTest {
-    
-    @isTest
-    public static void validateIfGoingFromAuthorizedAddress(){
-        
+    private final static Profile SYSTEMADMIN_PROFILE = [SELECT Id FROM Profile WHERE name='System Administrator' LIMIT 1];
+    @TestSetup
+    public static void setup() {
         insert new SLA_Threshold_Warning__c(Case_SLA_Threshold_1__c = 0.5, Case_SLA_Threshold_2__c = 0.7,
-                                           Case_SLA_Threshold_3__c = 0.8, Stage_SLA_Threshold_1__c = 0.5,
-                                           Stage_SLA_Threshold_2__c = 0.7, Stage_SLA_Threshold_3__c = 0.6);
-        
+                                          Case_SLA_Threshold_3__c = 0.8, Stage_SLA_Threshold_1__c = 0.5,
+                                          Stage_SLA_Threshold_2__c = 0.7, Stage_SLA_Threshold_3__c = 0.6);
         Case c = new Case();
         c.Subject = 'Test';
         c.RecordTypeId = Schema.sObjectType.Case.getRecordTypeInfosByDeveloperName().get('Interaction').getRecordTypeId();
         insert c;
+
+        ASF_TestDataFactory.createCaseCategoryConfig();
+        List<Case> caseL = ASF_TestDataFactory.createCaseRecords(1);
+    }
+
+    @isTest
+    public static void validateIfGoingFromAuthorizedAddress(){
+        Case c = [select id from case where recordtypeid = :ASF_Constants.RT_INTERACTION limit 1];
         Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
         String[] toAddresses = new String[] {'test@test.com.invalid'}; 
         mail.setToAddresses(toAddresses);
@@ -23,17 +29,9 @@ public class ASF_EmailMessageHelperTest {
         Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail }); 
     } 
     @isTest
-    public static void validateIfGoingFromAuthorizedAddressReopen(){
+    public static void checkAndReopenClosedCasesTest(){
         
-        insert new SLA_Threshold_Warning__c(Case_SLA_Threshold_1__c = 0.5, Case_SLA_Threshold_2__c = 0.7,
-                                           Case_SLA_Threshold_3__c = 0.8, Stage_SLA_Threshold_1__c = 0.5,
-                                           Stage_SLA_Threshold_2__c = 0.7, Stage_SLA_Threshold_3__c = 0.6);
-        ASF_TestDataFactory.createC3IntegrationsAndCase();
-        String cccId = [SELECT Id,CCC_External_Id__c FROM ASF_Case_Category_Config__c WHERE CCC_External_Id__c != null].CCC_External_Id__c;
-        Case c = new Case();
-        c.Subject = 'Test';
-        c.RecordTypeId = ASF_Constants.RT_INTERACTION;
-        insert c;
+        Case c = [select id from case where recordtypeid = :ASF_Constants.RT_FRAMEWORK limit 1];
         Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
         String[] toAddresses = new String[] {'test@test.com.invalid'}; 
         mail.setToAddresses(toAddresses);
@@ -42,25 +40,16 @@ public class ASF_EmailMessageHelperTest {
         mail.setBccSender(false);
         mail.setUseSignature(false);
         mail.setPlainTextBody('This is test email with new name..');
-        Messaging.SendEmailResult[] initialResults = Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail });
-        
-        EmailMessage initialEmailMessage = new EmailMessage(
-            ParentId = c.Id,
-            FromAddress = 'testuser@example.com',
-            ToAddress = toAddresses[0],
-            Subject = 'Test Email Relay',
-            TextBody = 'This is test email with new name..',
-            MessageIdentifier = '<initialMessageId@example.com>'
-        );
-        insert initialEmailMessage;
-        
+        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail }); 
+
+        c.Stage__c = 'Resolved';
+        c.Status = 'Closed';
         c.RecordTypeId = ASF_Constants.RT_FRAMEWORK;
-        c.CCC_External_Id__c = cccId;
-        c.Status = ASF_Constants.ONCREATECLOSESTATUS;
-        c.Stage__c = ASF_Constants.ONCREATECLOSESTAGE;
-        c.Reopen_Days__c = 3;
+        c.Reopen_Days__c = 1;
         update c;
         
+        Test.startTest();
+        EmailMessage oldMail = [Select MessageIdentifier from EmailMessage LIMIT 1];
         Messaging.SingleEmailMessage mail2 = new Messaging.SingleEmailMessage();
         mail2.setToAddresses(toAddresses);
         mail2.setWhatId(c.Id);
@@ -68,10 +57,76 @@ public class ASF_EmailMessageHelperTest {
         mail2.setBccSender(false);
         mail2.setUseSignature(false);
         mail2.setPlainTextBody('This is test email with new name..');
-        Map<String, String> headers = new Map<String, String>();
-        mail2.setInReplyTo('<initialMessageId@example.com>');
-        mail2.setReferences('<initialMessageId@example.com>');
-        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail2 }); 
+        mail2.setInReplyTo(oldMail.MessageIdentifier);
+        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail2 });
+        test.stopTest();
     } 
-    
+
+    @isTest
+    public static void checkAndReopenClosedCasesTest2(){
+        
+        Case c = [select id from case where recordtypeid = :ASF_Constants.RT_FRAMEWORK limit 1];
+        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
+        String[] toAddresses = new String[] {'test@test.com.invalid'}; 
+        mail.setToAddresses(toAddresses);
+        mail.setWhatId(c.Id);
+        mail.setSubject('Test Email Relay');
+        mail.setBccSender(false);
+        mail.setUseSignature(false);
+        mail.setPlainTextBody('This is test email with new name..');
+        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail }); 
+
+        c.Stage__c = 'Resolved';
+        c.Status = 'Closed';
+        c.RecordTypeId = ASF_Constants.RT_FRAMEWORK;
+        c.Reopen_Days__c = -1;
+        update c;
+        
+        Test.startTest();
+        EmailMessage oldMail = [Select MessageIdentifier from EmailMessage LIMIT 1];
+        Messaging.SingleEmailMessage mail2 = new Messaging.SingleEmailMessage();
+        mail2.setToAddresses(toAddresses);
+        mail2.setWhatId(c.Id);
+        mail2.setSubject('Test Email Relay');
+        mail2.setBccSender(false);
+        mail2.setUseSignature(false);
+        mail2.setPlainTextBody('This is test email with new name..');
+        mail2.setInReplyTo(oldMail.MessageIdentifier);
+        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail2 });
+        test.stopTest();
+    } 
+
+    @isTest
+    public static void checkAndReopenClosedCasesTest3(){
+        
+        Case c = [select id from case where recordtypeid = :ASF_Constants.RT_FRAMEWORK limit 1];
+        Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
+        String[] toAddresses = new String[] {'test@test.com.invalid'}; 
+        mail.setToAddresses(toAddresses);
+        mail.setWhatId(c.Id);
+        mail.setSubject('Test Email Relay');
+        mail.setBccSender(false);
+        mail.setUseSignature(false);
+        mail.setPlainTextBody('This is test email with new name..');
+        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail }); 
+
+        c.Stage__c = 'Resolved';
+        c.Status = 'Closed';
+        c.RecordTypeId = ASF_Constants.RT_FRAMEWORK;
+        c.Reopen_Days__c = null;
+        update c;
+        
+        Test.startTest();
+        EmailMessage oldMail = [Select MessageIdentifier from EmailMessage LIMIT 1];
+        Messaging.SingleEmailMessage mail2 = new Messaging.SingleEmailMessage();
+        mail2.setToAddresses(toAddresses);
+        mail2.setWhatId(c.Id);
+        mail2.setSubject('Test Email Relay');
+        mail2.setBccSender(false);
+        mail2.setUseSignature(false);
+        mail2.setPlainTextBody('This is test email with new name..');
+        mail2.setInReplyTo(oldMail.MessageIdentifier);
+        Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail2 });
+        test.stopTest();
+    } 
 }
